--- a/package.json
+++ b/package.json
@@ -17,17 +17,30 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@material-ui/core": "^4.8.0",
-    "aws-sdk": "^2.610.0",
+    "aws-sdk": "^2.611.0",
+    "axios": "^0.19.2",
+    "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
     "ccapture.js": "^1.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "path": "^0.12.7",
     "react": "^16.7.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-audio-player": "^0.11.1",
     "react-dom": "^16.7.0",
+    "react-favicon": "0.0.17",
+    "react-hot-loader": "^4.12.19",
+    "react-media-recorder": "^1.2.0",
+    "recordrtc": "^5.5.8",
     "three": "^0.111.0",
     "three-gltf-loader": "^1.111.0",
     "three-orbitcontrols": "^2.110.3",
+    "url": "^0.11.0",
     "webpack": "^4.28.3",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-node-externals": "^1.7.2"
