--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.4.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "nodemailer": "^6.4.2",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-animate-on-scroll": "^2.1.5",
