--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-favicon": "0.0.17",
     "react-hot-loader": "^4.12.19",
     "react-media-recorder": "^1.2.0",
+    "react-meta-tags": "^0.7.4",
     "react-modal": "^3.11.1",
     "recordrtc": "^5.5.8",
     "three": "^0.111.0",
