--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "ccapture.js": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "events": "^3.1.0",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.2",
+    "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-animate-on-scroll": "^2.1.5",
