--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.7.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-audio-player": "^0.11.1",
+    "react-color": "^2.18.0",
     "react-dom": "^16.7.0",
     "react-favicon": "0.0.17",
     "react-hot-loader": "^4.12.19",
